<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Donation Tracker</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="guest">Login as a guest</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings" tools:keep="@string/action_settings">Settings</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password" tools:keep="@string/enter_password">Enter password</string>
    <string name="username">Username</string>
    <string name="invalid_username_or_password">Invalid username or password</string>
    <string name="password" tools:keep="@string/password">Password</string>
    <string name="cancel">Cancel</string>
    <string-array name="acctTypes" tools:keep="@array/acctTypes">
        <item>User</item>
        <item>Employee</item>
        <item>Manager</item>
        <item>Administrator</item>
    </string-array>
    <string name="title_activity_app_screen">AppScreen</string>
    <string name="search">Search</string>
    <string name="view_locations">View Locations</string>
    <string name="search_for_item">Search for item</string>
    <string name="see_all_locations">See all locations</string>
    <string name="logout">Logout</string>
    <string name="title_activity_employee_app_screen">EmployeeAppScreen</string>
    <string name="title_activity_search_screen">SearchScreen</string>
    <string name="title_activity_add_item_screen">AddItemScreen</string>
    <string name="title_activity_item_detail">ItemDetailActivity</string>
    <string name="title_activity_list_of_items">ListOfItems</string>
    <string name="title_activity_list_of_locations">ListOfLocations</string>
    <string name="title_activity_location_detail">LocationDetailActivity</string>

    <!-- These are for the Search, ItemsByName, and ItemsInCategory screens -->
    <string name="searchForItem">Search for this item</string>
    <string name="searchForCat">Search for items in this category</string>
    <string name="searchForLoc"></string>
    <string name="enterItemSearch">Enter an item</string>
    <string name="searchButton">Search</string>
    <string-array name="everyLocation">
        <item>All locations</item>
        <item>AFD Station 4</item>
        <item>BOYS &amp; GILRS CLUB W.W. WOOLFOLK</item>
        <item>PATHWAY UPPER ROOM CHRISTIAN MINISTRIES</item>
        <item>PAVILION OF HOPE INC</item>
        <item>D&amp;D CONVENIENCE STORE</item>
        <item>KEEP NORTH FULTON BEAUTIFUL</item>
    </string-array>
    <string-array name="itemCategories">
        <item>Clothing</item>
        <item>Hat</item>
        <item>Kitchen</item>
        <item>Electronics</item>
        <item>Household</item>
        <item>Other</item>
    </string-array>

    <!-- These are for the Add Item screen -->
    <string name="addItem">Add Item</string>
    <string name="enterTime">Donation Time</string>
    <string name="enterLocation">Select Donation Location</string>
    <string name="enterShortDescr">Short Item Description</string>
    <string name="enterFullDescr">Full Item Description</string>
    <string name="enterValue">Donation Value</string>
    <string name="enterCategory">Selection Item Category</string>
    <string-array name="allLocations">
        <item>AFD Station 4</item>
        <item>BOYS &amp; GILRS CLUB W.W. WOOLFOLK</item>
        <item>PATHWAY UPPER ROOM CHRISTIAN MINISTRIES</item>
        <item>PAVILION OF HOPE INC</item>
        <item>D&amp;D CONVENIENCE STORE</item>
        <item>KEEP NORTH FULTON BEAUTIFUL</item>
    </string-array>

    <!-- For the ItemDetailFragment -->
    <string name="time">Time: %1$s</string>
    <string name="place">Item Location: %1$s</string>
    <string name="shortdesc">Short Description: %1$s</string>
    <string name="fulldesc">Full Description: %1$s</string>
    <string name="value">Value: $ %1$s</string>
    <string name="category">Category: %1$s</string>
    <string name="comments">Comments: %1$s</string>

    <!-- For the LocationDetailFragment -->
    <string name="location">Location Type: %1$s</string>
    <string name="longitude">Longitude: %1$s</string>
    <string name="latitude">Latitude: %1$s</string>
    <string name="phone_num">Phone Number: %1$s</string>
    <string name="address">Address: %1$s</string>
    <string name="website">Website: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_location_employee">LocationEmployee</string>
    <string name="title_activity_items_by_name">ItemsByName</string>
    <string name="title_activity_items_in_category">ItemsInCategory</string>
    <string name="title_activity_maps">Map</string>

    <!-- added to fix Android warnings: hardcoded strings -->
    <string name="select">Select</string>
    <string name="dateTimeHint">1/1/2018 8:00 am</string>
    <string name="addAtLocationDenied">You do not have permission to add to this Location</string>
    <string name="itemValueHint">1.00</string>
    <string name="shortDescriptionOfItem">Short description of item.</string>
    <string name="detailedDescriptionOfItem">Detailed description of item.</string>
    <string name="viewMap">View Map</string>
    <string name="viewLocationInventory">View location\'s inventory</string>
    <string name="viewInventory">View Inventory</string>
    <string name="updateLocationInventory">Update location\'s inventory</string>
    <string name="addDonation">Add Donation</string>
    <string name="searchSpecificItem">Search for a specific item</string>
    <string name="seeListAllLocations">See list of all locations</string>
    <string name="usernameAlreadyExists">Username already exists.</string>
    <string name="emailHint">email@example.com</string>
    <string name="enterEmail">Enter email</string>
    <string name="createPass">Create password</string>
    <string name="selectAcctType">Select account type</string>
    <string name="chooseLocation">Choose a location</string>
    <string name="searchItemOrCat">Search by item or by category</string>
    <string name="additionalComments">Additional Comments</string>
    <string name="comment">Comments...</string>
</resources>
